# DataScienceMatSci

./: README.md  pyproject.toml  requirements.txt
datascienceintro/: Classification_DecisionTree.ipynb  DataScience_Stats.ipynb  DataScience_Stats_Correlation_2Dice.ipynb  ExplainableAI_Classification_Adult_EBM.ipynb  ExplainableAI_Regression_WineQuality_SHAP.ipynb  LinearRegression_sklearn.ipynb  PyTorch_ExplainableAI_ImageLime.ipynb  PyTorch_FineTune.ipynb  PyTorch_GraphNN_MoleculePrediction.ipynb  PyTorch_MNIST.ipynb  PyTorch_MNIST.py  PyTorch_SimpleLinearRegression.ipynb  Regression_Housing.ipynb  Regression_WineQuality.ipynb  cluster.ipynb  index.ipynb  profile_plot.py
datascienceintro/data/PetImages/: Readme.md
datascienceintro/data/adult/: Readme.md
datascienceintro/solutions/: Solution_Classification_DecisionTree.ipynb  Solution_Cluster.ipynb  Solution_PyTorch_MNIST.ipynb  Solution_Regression_Housing.ipynb  Solution_Regression_WineQuality.ipynb
docker/: Readme.md
docker/PyTorch/: Dockerfile
